<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">GShop</string>
    <string name="splash_text_title">GK</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="header_img_description">Header Image</string>
    <string name="title_login" tools:ignore="ExtraTranslation">LOGIN</string>
    <string name="title_register" tools:ignore="ExtraTranslation">REGISTER</string>
    <string name="et_hint_email_id" tools:ignore="ExtraTranslation">Email ID</string>
    <string name="et_hint_password" tools:ignore="ExtraTranslation">Password</string>
    <string name="btn_lbl_login" tools:ignore="ExtraTranslation">Login</string>
    <string name="btn_lbl_register" tools:ignore="ExtraTranslation">Register</string>
    <string name="register" tools:ignore="ExtraTranslation"><u>Register</u></string>
    <string name="don_t_have_an_account" tools:ignore="ExtraTranslation">Don\'t have an Account?</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="have_an_account">Have An Account ?</string>
    <string name="login">Login</string>
    <string name="err_msg_enter_first_name">Please enter First Name</string>
    <string name="err_msg_enter_last_name">Please enter Last Name</string>
    <string name="err_msg_enter_email_address">Please enter Email Address</string>
    <string name="err_msg_enter_password">Please enter Password</string>
    <string name="err_msg_enter_confirm_password">Please enter Confirm Password</string>
    <string name="err_msg_password_do_not_match">Password and Confirm Password don\'t match</string>
    <string name="registery_success">Thanks for registering!</string>
    <string name="progressBar_text">Please Wait&#8230;</string>
    <string name="enter_email_reset_password">Enter your Email ID, we will send you and email to reset your password</string>
    
    <string name="title_complete_profile">COMPLETE PROFILE</string>
    <string name="et_hint_mobile_number">Mobile Number</string>
    <string name="rb_lbl_male">Male</string>
    <string name="rb_lbl_female">Female</string>
    <string name="btn_lbl_save">Save</string>

</resources>